# reservaciones_app_admin

./: Alumnos.qml  CMakeLists.txt  Main.qml  MisClases.qml  ScrollablePage.qml  main.cpp
